--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "keywords": [],
   "main": "src/index.js",
-  "proxy": "http://localhost:5678",
+  "proxy": "http://localhost:9999",
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@material-ui/lab": "^4.0.0-alpha.50",
     "@reach/dialog": "^0.10.0",
     "@reach/visually-hidden": "^0.10.0",
     "@tippy.js/react": "^3.1.1",
+    "assert": "^2.0.0",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
+    "mongodb": "^3.5.6",
     "morgan": "^1.10.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
